version/0.15/_sources/api/ansys/dpf/core/operators/result/write_cms_rbd_file/write_cms_rbd_file.rst.txt






:class:`write_cms_rbd_file`
===========================


.. py:class:: ansys.dpf.core.operators.result.write_cms_rbd_file.write_cms_rbd_file(model_data=None, center_of_mass=None, inertia_relief=None, model_size=None, master_node_coordinates=None, v_trsf=None, k_mat=None, mass_mat=None, c_mat=None, rhs=None, dn=None, dr_cross_n=None, drn=None, dn_cross_n=None, dnx_y=None, dny_y=None, dnz_y=None, dyx_n=None, dyy_n=None, dyz_n=None, dnxn=None, dnyn=None, dnzn=None, file_path=None, config=None, server=None)

   Bases: :py:obj:`ansys.dpf.core.dpf_operator.Operator`


   Write the invariant terms and the model data in a cms_rbd file


   Inputs
   ------
   model_data: PropertyField
       data describing the finite element model
   center_of_mass: Field
       center of mass of the body
   inertia_relief: Field
       inertia matrix
   model_size: float
       size of the diagonal box containing the body
   master_node_coordinates:
   v_trsf:
       translational and rotational shape functions
   k_mat: Field
   mass_mat: Field
   c_mat: Field
   rhs: Field
   dn:
   dr_cross_n:
   drn:
   dn_cross_n:
   dnx_y:
   dny_y:
   dnz_y:
   dyx_n:
   dyy_n:
   dyz_n:
   dnxn:
   dnyn:
   dnzn:
   file_path: str
       path with cms_rbd extension where the export occurs

   Outputs
   -------
   data_sources: DataSources
       Data Source containing the cms_rbd file generated.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf

   >>> # Instantiate operator
   >>> op = dpf.operators.result.write_cms_rbd_file()

   >>> # Make input connections
   >>> my_model_data = dpf.PropertyField()
   >>> op.inputs.model_data.connect(my_model_data)
   >>> my_center_of_mass = dpf.Field()
   >>> op.inputs.center_of_mass.connect(my_center_of_mass)
   >>> my_inertia_relief = dpf.Field()
   >>> op.inputs.inertia_relief.connect(my_inertia_relief)
   >>> my_model_size = float()
   >>> op.inputs.model_size.connect(my_model_size)
   >>> my_master_node_coordinates = dpf.()
   >>> op.inputs.master_node_coordinates.connect(my_master_node_coordinates)
   >>> my_v_trsf = dpf.()
   >>> op.inputs.v_trsf.connect(my_v_trsf)
   >>> my_k_mat = dpf.Field()
   >>> op.inputs.k_mat.connect(my_k_mat)
   >>> my_mass_mat = dpf.Field()
   >>> op.inputs.mass_mat.connect(my_mass_mat)
   >>> my_c_mat = dpf.Field()
   >>> op.inputs.c_mat.connect(my_c_mat)
   >>> my_rhs = dpf.Field()
   >>> op.inputs.rhs.connect(my_rhs)
   >>> my_dn = dpf.()
   >>> op.inputs.dn.connect(my_dn)
   >>> my_dr_cross_n = dpf.()
   >>> op.inputs.dr_cross_n.connect(my_dr_cross_n)
   >>> my_drn = dpf.()
   >>> op.inputs.drn.connect(my_drn)
   >>> my_dn_cross_n = dpf.()
   >>> op.inputs.dn_cross_n.connect(my_dn_cross_n)
   >>> my_dnx_y = dpf.()
   >>> op.inputs.dnx_y.connect(my_dnx_y)
   >>> my_dny_y = dpf.()
   >>> op.inputs.dny_y.connect(my_dny_y)
   >>> my_dnz_y = dpf.()
   >>> op.inputs.dnz_y.connect(my_dnz_y)
   >>> my_dyx_n = dpf.()
   >>> op.inputs.dyx_n.connect(my_dyx_n)
   >>> my_dyy_n = dpf.()
   >>> op.inputs.dyy_n.connect(my_dyy_n)
   >>> my_dyz_n = dpf.()
   >>> op.inputs.dyz_n.connect(my_dyz_n)
   >>> my_dnxn = dpf.()
   >>> op.inputs.dnxn.connect(my_dnxn)
   >>> my_dnyn = dpf.()
   >>> op.inputs.dnyn.connect(my_dnyn)
   >>> my_dnzn = dpf.()
   >>> op.inputs.dnzn.connect(my_dnzn)
   >>> my_file_path = str()
   >>> op.inputs.file_path.connect(my_file_path)

   >>> # Instantiate operator and connect inputs in one line
   >>> op = dpf.operators.result.write_cms_rbd_file(
   ...     model_data=my_model_data,
   ...     center_of_mass=my_center_of_mass,
   ...     inertia_relief=my_inertia_relief,
   ...     model_size=my_model_size,
   ...     master_node_coordinates=my_master_node_coordinates,
   ...     v_trsf=my_v_trsf,
   ...     k_mat=my_k_mat,
   ...     mass_mat=my_mass_mat,
   ...     c_mat=my_c_mat,
   ...     rhs=my_rhs,
   ...     dn=my_dn,
   ...     dr_cross_n=my_dr_cross_n,
   ...     drn=my_drn,
   ...     dn_cross_n=my_dn_cross_n,
   ...     dnx_y=my_dnx_y,
   ...     dny_y=my_dny_y,
   ...     dnz_y=my_dnz_y,
   ...     dyx_n=my_dyx_n,
   ...     dyy_n=my_dyy_n,
   ...     dyz_n=my_dyz_n,
   ...     dnxn=my_dnxn,
   ...     dnyn=my_dnyn,
   ...     dnzn=my_dnzn,
   ...     file_path=my_file_path,
   ... )

   >>> # Get output data
   >>> result_data_sources = op.outputs.data_sources()












.. py:currentmodule:: write_cms_rbd_file

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect an input on the operator using a pin number.
          * - :py:attr:`~connect_operator_as_input`
            - Connect an operator as an input on a pin.
          * - :py:attr:`~get_output`
            - Retrieve the output of the operator on the pin number.
          * - :py:attr:`~run`
            - Evaluate this operator.
          * - :py:attr:`~eval`
            - Evaluate this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~inputs`
            - Enables to connect inputs to the operator
          * - :py:attr:`~outputs`
            - Enables to get outputs of the operator by evaluating it
          * - :py:attr:`~progress_bar`
            - Enable or disable progress bar display when requesting the operator's output.
          * - :py:attr:`~config`
            - Copy of the operator's current configuration.
          * - :py:attr:`~id`
            - Retrieve the unique identifier of the operator.
          * - :py:attr:`~specification`
            - Returns the Specification (or documentation) of this Operator.
          * - :py:attr:`~changelog`
            - Return the changelog of this operator.
          * - :py:attr:`~version`
            - Return the current version of the operator.


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~name`
            - 


   .. tab-item:: Static methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~default_config`
            - Returns the default config of the operator.
          * - :py:attr:`~operator_specification`
            - Documents an Operator with its description (what the Operator does),its inputs and outputs and some properties.


   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__del__`
            - Delete this instance.
          * - :py:attr:`~__str__`
            - Describe the entity.
          * - :py:attr:`~__add__`
            - Add two fields or two fields containers.
          * - :py:attr:`~__sub__`
            - Subtract two fields or two fields containers.
          * - :py:attr:`~__pow__`
            - Raise each element of a field or a fields container to power 2.
          * - :py:attr:`~__mul__`
            - Multiply two fields or two fields containers.
          * - :py:attr:`~__truediv__`
            - Perform division with another operator or a scalar.




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.result.write_cms_rbd_file import write_cms_rbd_file

Property detail
---------------

.. py:property:: inputs
   :type: InputsWriteCmsRbdFile


   Enables to connect inputs to the operator

   :returns: An instance of InputsWriteCmsRbdFile.
   :rtype: inputs

.. py:property:: outputs
   :type: OutputsWriteCmsRbdFile


   Enables to get outputs of the operator by evaluating it

   :returns: An instance of OutputsWriteCmsRbdFile.
   :rtype: outputs

.. py:property:: progress_bar
   :type: bool


   Enable or disable progress bar display when requesting the operator's output.

   With this property, the user can choose to print a progress bar when
   the operator's output is requested, default is False

.. py:property:: config

   Copy of the operator's current configuration.

   You can modify the copy of the configuration and then use ``operator.config = new_config``
   or instantiate an operator with the new configuration as a parameter.

   For information on an operator's options, see the documentation for that operator.

   :returns: Copy of the operator's current configuration.
   :rtype: :class:`ansys.dpf.core.config.Config`

   .. rubric:: Examples

   Modify the copy of an operator's configuration and set it as current config
   of the operator.

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.math.add()
   >>> config_add = op.config
   >>> config_add.set_work_by_index_option(True)
   >>> op.config = config_add

.. py:property:: id
   :type: int


   Retrieve the unique identifier of the operator.

   This property returns the unique ID associated with the operator.
   This property is lazily initialized.

   :returns: The unique identifier of the operator.
   :rtype: int

   .. rubric:: Notes

   Property available with server's version starting at 10.0.

.. py:property:: specification

   Returns the Specification (or documentation) of this Operator.

   :rtype: Specification

.. py:property:: changelog
   :type: ansys.dpf.core.changelog.Changelog


   Return the changelog of this operator.

   Requires DPF 11.0 (2026 R1) or above.

   :returns: Changelog of the operator.
   :rtype: changelog

.. py:property:: version
   :type: packaging.version.Version


   Return the current version of the operator.

   Requires DPF 11.0 (2026 R1) or above.



Attribute detail
----------------

.. py:attribute:: name
   :value: None




Method detail
-------------

.. py:method:: default_config(server: ansys.dpf.core.server_types.AnyServerType = None) -> ansys.dpf.core.config.Config
   :staticmethod:


   Returns the default config of the operator.

   This config can then be changed to the user needs and be used to
   instantiate the operator. The Configuration allows to customize
   how the operation will be processed by the operator.

   :param server: Server with channel connected to the remote or local instance. When
                  ``None``, attempts to use the global server.

   :returns: A new Config instance equivalent to the default config for this operator.
   :rtype: config


.. py:method:: connect(pin, inpt, pin_out=0)

   Connect an input on the operator using a pin number.

   :param pin: Number of the input pin.
   :type pin: int
   :param inpt:
   :type inpt: str, int, double, bool, list[int], list[float], Field, FieldsContainer, Scoping,
   :param ScopingsContainer: Operator, os.PathLike Object to connect to.
   :param MeshedRegion: Operator, os.PathLike Object to connect to.
   :param MeshesContainer: Operator, os.PathLike Object to connect to.
   :param DataSources: Operator, os.PathLike Object to connect to.
   :param CyclicSupport: Operator, os.PathLike Object to connect to.
   :param dict: Operator, os.PathLike Object to connect to.
   :param Outputs: Operator, os.PathLike Object to connect to.
   :param pin_out: If the input is an operator, the output pin of the input operator. The default is ``0``.
   :type pin_out: int, optional

   .. rubric:: Examples

   Compute the minimum of displacement by chaining the ``"U"`` and ``"min_max_fc"`` operators.

   >>> from ansys.dpf import core as dpf
   >>> from ansys.dpf.core import examples
   >>> data_src = dpf.DataSources(examples.find_multishells_rst())
   >>> disp_op = dpf.operators.result.displacement()
   >>> disp_op.inputs.data_sources(data_src)
   >>> max_fc_op = dpf.operators.min_max.min_max_fc()
   >>> max_fc_op.inputs.connect(disp_op.outputs)
   >>> max_field = max_fc_op.outputs.field_max()
   >>> max_field.data
   DPFArray([[0.59428386, 0.00201751, 0.0006032 ]]...


.. py:method:: connect_operator_as_input(pin, op)

   Connect an operator as an input on a pin.

   :param pin: Number of the output pin. The default is ``0``.
   :type pin: int
   :param op: Requested type of the output. The default is ``None``.
   :type op: :class:`ansys.dpf.core.dpf_operator.Operator`


.. py:method:: get_output(pin=0, output_type=None)

   Retrieve the output of the operator on the pin number.

   To activate the progress bar for server version higher or equal to 3.0,
   use ``my_op.progress_bar=True``

   :param pin: Number of the output pin. The default is ``0``.
   :type pin: int, optional
   :param output_type: Requested type of the output. The default is ``None``.
   :type output_type: :class:`ansys.dpf.core.common.types`, type,  optional

   :returns: Output of the operator.
   :rtype: type


.. py:method:: __del__()

   Delete this instance.


.. py:method:: __str__()

   Describe the entity.

   :returns: Description of the entity.
   :rtype: str


.. py:method:: run()

   Evaluate this operator.


.. py:method:: eval(pin=None)

   Evaluate this operator.

   :param pin: Number of the output pin. The default is ``None``.
   :type pin: int

   :returns: **output** -- Returns the first output of the operator by default and the output of a
             given pin when specified. Or, it only evaluates the operator without output.
   :rtype: FieldsContainer, Field, MeshedRegion, Scoping

   .. rubric:: Examples

   Use the ``eval`` method.

   >>> from ansys.dpf import core as dpf
   >>> import ansys.dpf.core.operators.math as math
   >>> from ansys.dpf.core import examples
   >>> data_src = dpf.DataSources(examples.find_multishells_rst())
   >>> disp_op = dpf.operators.result.displacement()
   >>> disp_op.inputs.data_sources(data_src)
   >>> normfc = math.norm_fc(disp_op).eval()


.. py:method:: __add__(fields_b)

   Add two fields or two fields containers.

   :returns: **add**
   :rtype: operators.math.add_fc


.. py:method:: __sub__(fields_b)

   Subtract two fields or two fields containers.

   :returns: **minus**
   :rtype: operators.math.minus_fc


.. py:method:: __pow__(value)

   Raise each element of a field or a fields container to power 2.


.. py:method:: __mul__(value)

   Multiply two fields or two fields containers.

   :returns: **mul**
   :rtype: operators.math.generalized_inner_product_fc


.. py:method:: operator_specification(op_name, server=None)
   :staticmethod:


   Documents an Operator with its description (what the Operator does),its inputs and outputs and some properties.


.. py:method:: __truediv__(inpt)

   Perform division with another operator or a scalar.

   This method allows the use of the division operator (`/`) between an
   `Operator` instance and either another `Operator` or a scalar value (float).





